--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.22",
     "axios": "^1.7.4",
     "framer-motion": "^11.3.28",
     "mongoose": "^8.5.3",
