Added api and page for register user

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-MONGODB_URI =mongodb+srv://myblushbelle8001:EXabC9J2LrwF8f7e@cluster0.uccvn.mongodb.net/
+MONGODB_URI =mongodb+srv://blushbelle000:Nikhil1roy313@cluster0.k5j0z.mongodb.net/
 DB_NAME = "blushbelle"
-MONGODB_USERNAME =myblushbelle8001
-MONGODB_PASSWORD =EXabC9J2LrwF8f7e
+MONGODB_USERNAME =blushbelle000
+MONGODB_PASSWORD =Nikhil1roy313
 AUTH_SECRET=3RuYfolVaRE7CZlkBLaQrf8xH0WOIQ+fjX30vNEr9OI=
 JWT_SECRET=blushbelle
-RESEND_API_KEY=re_8X5REX12_52x9qqse7Fy28sZsig5SRuQC
+RESEND_API_KEY=re_Qw81oiDx_3Kh2zxu5yhKZyEHTabvWMUFh
 BASE_URL=https://www.blushbelle.com
 
 
