--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@react-email/components": "^0.0.22",
     "axios": "^1.7.4",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.28",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
