--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.28",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
     "react": "^18.3.1",
