--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "dynamic": "^4.2.2",
     "framer-motion": "^11.3.28",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
+    "react-toastify": "^10.0.5",
     "resend": "^4.0.0"
   },
   "devDependencies": {
