--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-email/components": "^0.0.22",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.4.0",
     "dotenv": "^16.4.5",
     "dynamic": "^4.2.2",
     "framer-motion": "^11.3.28",
