--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-toastify": "^10.0.5",
