Added some ui chnages in the register page

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGODB_URI =mongodb+srv://blushbelle000:Nikhil1roy313@cluster0.k5j0z.mongodb.net/
 DB_NAME = "blushbelle"
+NAME = "cleanveda"
 MONGODB_USERNAME =blushbelle000
 MONGODB_PASSWORD =Nikhil1roy313
 AUTH_SECRET=3RuYfolVaRE7CZlkBLaQrf8xH0WOIQ+fjX30vNEr9OI=
