Added some chnages

--- a/.env
+++ b/.env
@@ -1,12 +1,8 @@
-MONGODB_URI =mongodb+srv://blushbelle000:Nikhil1roy313@cluster0.k5j0z.mongodb.net/
-DB_NAME = "blushbelle"
-NAME = "cleanveda"
-MONGODB_USERNAME =blushbelle000
-MONGODB_PASSWORD =Nikhil1roy313
+MONGODB_URI =mongodb+srv://jonojivangroceryin:MnEsnctdyDMrRB2b@cluster0.1sx7k.mongodb.net/
+DB_NAME = "jonoJivanGroocery"
+MONGODB_USERNAME =jonoJivanGroocery
+MONGODB_PASSWORD =MnEsnctdyDMrRB2b
 AUTH_SECRET=3RuYfolVaRE7CZlkBLaQrf8xH0WOIQ+fjX30vNEr9OI=
-JWT_SECRET=blushbelle
+JWT_SECRET=jonoJivanGroocery
 RESEND_API_KEY=re_Qw81oiDx_3Kh2zxu5yhKZyEHTabvWMUFh
-BASE_URL=https://www.blushbelle.com
-
-
-
+BASE_URL=www.jonojivangrocery.in
