Added google and facebook signUp using NextAuth

--- a/.env
+++ b/.env
@@ -6,3 +6,10 @@ AUTH_SECRET=3RuYfolVaRE7CZlkBLaQrf8xH0WOIQ+fjX30vNEr9OI=
 JWT_SECRET=jonoJivanGroocery
 RESEND_API_KEY=re_Qw81oiDx_3Kh2zxu5yhKZyEHTabvWMUFh
 BASE_URL=www.jonojivangrocery.in
+
+
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+FACEBOOK_CLIENT_ID=your-facebook-client-id
+FACEBOOK_CLIENT_SECRET=your-facebook-client-secret
+NEXTAUTH_SECRET=your-random-secret
