--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ RESEND_API_KEY=re_Qw81oiDx_3Kh2zxu5yhKZyEHTabvWMUFh
 BASE_URL=www.jonojivangrocery.in
 
 
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_CLIENT_ID=1030726972756-8aivt8sh5kjc91l1ta3oloc964evmbe5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 FACEBOOK_CLIENT_ID=your-facebook-client-id
 FACEBOOK_CLIENT_SECRET=your-facebook-client-secret
 NEXTAUTH_SECRET=your-random-secret
