NEXTAUTH_URL=https://www.jonojivangrocery.in

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ GOOGLE_CLIENT_SECRET=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
 FACEBOOK_CLIENT_ID=your-facebook-client-id
 FACEBOOK_CLIENT_SECRET=your-facebook-client-secret
 NEXTAUTH_SECRET=sdxhcfjgvhkbjnkml
+NEXTAUTH_URL=https://www.jonojivangrocery.in
+
