--- a/.env
+++ b/.env
@@ -1,17 +1,15 @@
-MONGODB_URI =mongodb+srv://jonojivangroceryin:MnEsnctdyDMrRB2b@cluster0.1sx7k.mongodb.net/
-DB_NAME = "jonoJivanGroocery"
-MONGODB_USERNAME =jonoJivanGroocery
-MONGODB_PASSWORD =MnEsnctdyDMrRB2b
+MONGODB_URI=mongodb+srv://jonojivangroceryin:MnEsnctdyDMrRB2b@cluster0.1sx7k.mongodb.net/jonoJivanGrocery
+DB_NAME="jonoJivanGrocery"
+MONGODB_USERNAME=jonoJivanGrocery
+MONGODB_PASSWORD=MnEsnctdyDMrRB2b
 AUTH_SECRET=3RuYfolVaRE7CZlkBLaQrf8xH0WOIQ+fjX30vNEr9OI=
-JWT_SECRET=jonoJivanGroocery
+JWT_SECRET=jonoJivanGrocery
 RESEND_API_KEY=re_Qw81oiDx_3Kh2zxu5yhKZyEHTabvWMUFh
-BASE_URL=www.jonojivangrocery.in
+BASE_URL=https://www.jonojivangrocery.in
 
-
-GOOGLE_CLIENT_ID=1030726972756-475qdthppekqj3ps540f6a8o6313sde0.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=1030726972756-ccbd39g8jqbbldn17cvfnehun9c5ai9s.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 FACEBOOK_CLIENT_ID=your-facebook-client-id
 FACEBOOK_CLIENT_SECRET=your-facebook-client-secret
 NEXTAUTH_SECRET=sdxhcfjgvhkbjnkml
 NEXTAUTH_URL=https://www.jonojivangrocery.in
-
