--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ MONGODB_PASSWORD=MnEsnctdyDMrRB2b
 AUTH_SECRET=3RuYfolVaRE7CZlkBLaQrf8xH0WOIQ+fjX30vNEr9OI=
 JWT_SECRET=jonoJivanGrocery
 RESEND_API_KEY=re_Qw81oiDx_3Kh2zxu5yhKZyEHTabvWMUFh
-BASE_URL=https://www.jonojivangrocery.in
+BASE_URL=https://ww.jonojivangrocery.in
+
 
 GOOGLE_CLIENT_ID=1030726972756-ccbd39g8jqbbldn17cvfnehun9c5ai9s.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
