--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGODB_URI=mongodb+srv://jonojivangroceryin:MnEsnctdyDMrRB2b@cluster0.1sx7k.mongodb.net/jonoJivanGrocery
+MONGODB_URI=mongodb+srv://bringsmile2024:<db_password>@cluster0.czrry.mongodb.net/
 DB_NAME="jonoJivanGrocery"
-MONGODB_USERNAME=jonoJivanGrocery
-MONGODB_PASSWORD=MnEsnctdyDMrRB2b
+MONGODB_USERNAME=bringsmile2024
+MONGODB_PASSWORD=Nikhil1roy2024
 AUTH_SECRET=3RuYfolVaRE7CZlkBLaQrf8xH0WOIQ+fjX30vNEr9OI=
 JWT_SECRET=jonoJivanGrocery
 RESEND_API_KEY=re_Qw81oiDx_3Kh2zxu5yhKZyEHTabvWMUFh
