--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://bringsmile2024:<db_password>@cluster0.czrry.mongodb.net/
+MONGODB_URI=mongodb+srv://bringsmile2024:Nikhil1roy2024@cluster0.czrry.mongodb.net/
 DB_NAME="jonoJivanGrocery"
 MONGODB_USERNAME=bringsmile2024
 MONGODB_PASSWORD=Nikhil1roy2024
