--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-auth": "^4.24.10",
     "nookies": "^2.5.2",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
