--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGODB_URI=mongodb+srv://bringsmile2024:Nikhil1roy2024@cluster0.czrry.mongodb.net/
-DB_NAME="jonoJivanGrocery"
-MONGODB_USERNAME=bringsmile2024
-MONGODB_PASSWORD=Nikhil1roy2024
+MONGODB_URI=mongodb+srv://emailbringsmile:nYq7a6EoC6K8GpuQ@cluster0.w7fmn.mongodb.net/
+DB_NAME="BringSmileFoundation"
+MONGODB_USERNAME=emailbringsmile
+MONGODB_PASSWORD=nYq7a6EoC6K8GpuQ
 AUTH_SECRET=3RuYfolVaRE7CZlkBLaQrf8xH0WOIQ+fjX30vNEr9OI=
 JWT_SECRET=jonoJivanGrocery
 RESEND_API_KEY=re_Qw81oiDx_3Kh2zxu5yhKZyEHTabvWMUFh
