Modofed the api

--- a/.env
+++ b/.env
@@ -8,6 +8,12 @@ RESEND_API_KEY=re_Qw81oiDx_3Kh2zxu5yhKZyEHTabvWMUFh
 BASE_URL=https://www.jonojivangrocery.in
 
 
+RAZORPAY_KEY_ID=rzp_live_080oM2QfU4g3q0	
+RAZORPAY_SECRET=B6THz67qs2kD9pyqX0VXB9xs
+
+
+
+
 GOOGLE_CLIENT_ID=1030726972756-ccbd39g8jqbbldn17cvfnehun9c5ai9s.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 FACEBOOK_CLIENT_ID=your-facebook-client-id
