--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.4.0",
     "cookie": "^1.0.1",
+    "crypto": "^1.0.1",
     "dompurify": "^3.2.1",
     "dotenv": "^16.4.5",
     "dynamic": "^4.2.2",
@@ -24,6 +25,7 @@
     "next": "^14.2.5",
     "next-auth": "^4.24.10",
     "nookies": "^2.5.2",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
