--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@ MONGODB_PASSWORD=nYq7a6EoC6K8GpuQ
 AUTH_SECRET=3RuYfolVaRE7CZlkBLaQrf8xH0WOIQ+fjX30vNEr9OI=
 JWT_SECRET=jonoJivanGrocery
 RESEND_API_KEY=re_Qw81oiDx_3Kh2zxu5yhKZyEHTabvWMUFh
-BASE_URL=https://www.jonojivangrocery.in
+BASE_URL=https://www.bringsmile.org
 
 
-RAZORPAY_KEY_ID=rzp_live_080oM2QfU4g3q0	
-RAZORPAY_SECRET=B6THz67qs2kD9pyqX0VXB9xs
+RAZORPAY_KEY_ID=rzp_test_9P5WN79x91PczG
+RAZORPAY_SECRET=cd2Jczw4ssNt6FPA58upK9k3
 
 
 
