--- a/.env
+++ b/.env
@@ -12,6 +12,10 @@ RAZORPAY_KEY_ID=rzp_test_9P5WN79x91PczG
 RAZORPAY_SECRET=cd2Jczw4ssNt6FPA58upK9k3
 
 
+# RAZORPAY_KEY_ID=rzp_live_9ZTzDG6fFahGrR
+# RAZORPAY_SECRET=eYfmIaPHJrZDnFFFSUzlwcwA
+
+
 
 
 GOOGLE_CLIENT_ID=1030726972756-ccbd39g8jqbbldn17cvfnehun9c5ai9s.apps.googleusercontent.com
