--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-toastify": "^10.0.5",
-    "resend": "^4.0.0"
+    "resend": "^4.0.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "eslint": "^8",
