--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "@react-email/components": "^0.0.22",
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.4",
@@ -19,12 +20,15 @@
     "dompurify": "^3.2.1",
     "dotenv": "^16.4.5",
     "dynamic": "^4.2.2",
+    "fontkit": "^2.0.4",
     "framer-motion": "^11.3.28",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
     "next": "^14.2.5",
     "next-auth": "^4.24.10",
     "nookies": "^2.5.2",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.15.2",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
