Modied  the Payment Gateway

--- a/.env
+++ b/.env
@@ -10,12 +10,14 @@ RESEND_API_KEY=re_FqLTVW8K_BWumjypdnu46VaZhJfAVYRma
 BASE_URL=https://www.bringsmile.org
 
 
-# RAZORPAY_KEY_ID=rzp_live_9ZTzDG6fFahGrR
-# RAZORPAY_SECRET=eYfmIaPHJrZDnFFFSUzlwcwA
+RAZORPAY_KEY_ID=rzp_live_9ZTzDG6fFahGrR
+RAZORPAY_SECRET=eYfmIaPHJrZDnFFFSUzlwcwA
 
 
-RAZORPAY_KEY_ID=rzp_test_YyfNhFl02BDQxW
-RAZORPAY_SECRET=ru5mMSycoxOrtxBWUWlEI5RA
+
+# Test API
+# RAZORPAY_KEY_ID=rzp_test_YyfNhFl02BDQxW
+# RAZORPAY_SECRET=ru5mMSycoxOrtxBWUWlEI5RA
 
 
 
