--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.7",
     "cloudinary": "^2.4.0",
     "cookie": "^1.0.1",
     "crypto": "^1.0.1",
@@ -31,6 +32,7 @@
     "pdfkit": "^0.15.2",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
