--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.5",
     "react-typing-effect": "^2.0.5",
     "resend": "^4.0.0",
