--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "fontkit": "^2.0.4",
     "framer-motion": "^11.3.28",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "mongoose": "^8.5.3",
     "next": "^14.2.5",
     "next-auth": "^4.24.10",
     "nookies": "^2.5.2",
+    "papaparse": "^5.5.1",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.15.2",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-countup": "^6.5.3",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
