--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
   },
   "dependencies": {
     "@pdf-lib/fontkit": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.0.22",
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.7",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.4.0",
+    "clsx": "^2.1.1",
     "cookie": "^1.0.1",
     "crypto": "^1.0.1",
     "dompurify": "^3.2.1",
@@ -26,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "lucide-react": "^0.515.0",
     "mongoose": "^8.5.3",
     "next": "^14.2.5",
     "next-auth": "^4.24.10",
@@ -47,7 +57,9 @@
     "react-toastify": "^10.0.5",
     "react-typing-effect": "^2.0.5",
     "resend": "^4.0.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "eslint": "^8",
