--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
-MONGODB_URI=mongodb+srv://emailbringsmile:nYq7a6EoC6K8GpuQ@cluster0.w7fmn.mongodb.net/
+MONGODB_URI=mongodb+srv://bringsmilefoundation37:GMSzextT3Q6ns7g5@cluster0.ktbtwo2.mongodb.net/
 DB_NAME="BringSmileFoundation"
-MONGODB_USERNAME=emailbringsmile
-MONGODB_PASSWORD=nYq7a6EoC6K8GpuQ
+MONGODB_USERNAME=bringsmilefoundation37
+MONGODB_PASSWORD=GMSzextT3Q6ns7g5
+
+
 AUTH_SECRET=3RuYfolVaRE7CZlkBLaQrf8xH0WOIQ+fjX30vNEr9OI=
-JWT_SECRET=jonoJivanGrocery
+JWT_SECRET=bringSmileFoundation
 
 
 RESEND_API_KEY=re_FqLTVW8K_BWumjypdnu46VaZhJfAVYRma
