--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mongoose": "^8.5.3",
     "next": "^14.2.5",
     "next-auth": "^4.24.10",
+    "next-themes": "^0.4.6",
     "nookies": "^2.5.2",
     "papaparse": "^5.5.1",
     "pdf-lib": "^1.17.1",
@@ -69,6 +70,7 @@
     "react-typing-effect": "^2.0.5",
     "resend": "^4.0.0",
     "sharp": "^0.33.5",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
