--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@react-email/components": "^0.0.22",
     "@tailwindcss/typography": "^0.5.15",
     "@tiptap/extension-color": "^2.14.0",
