Fix the pages n the admin panel

--- a/.env
+++ b/.env
@@ -18,7 +18,10 @@ BASE_URL=https://www.bringsmile.org
 
 
 # Test API
+
+
 RAZORPAY_KEY_ID=rzp_test_4q2a92fHjUklSL
+NEXT_PUBLIC_RAZORPAY_KEY_ID=rzp_test_4q2a92fHjUklSL
 RAZORPAY_SECRET=Y7bS18m4EyFogrI54yOsESNN
 
 
