--- a/.env
+++ b/.env
@@ -20,9 +20,14 @@ BASE_URL=https://www.bringsmile.org
 # Test API
 
 
-RAZORPAY_KEY_ID=rzp_test_4q2a92fHjUklSL
-NEXT_PUBLIC_RAZORPAY_KEY_ID=rzp_test_4q2a92fHjUklSL
-RAZORPAY_SECRET=Y7bS18m4EyFogrI54yOsESNN
+# RAZORPAY_KEY_ID=rzp_test_4q2a92fHjUklSL
+# NEXT_PUBLIC_RAZORPAY_KEY_ID=rzp_test_4q2a92fHjUklSL
+# RAZORPAY_SECRET=Y7bS18m4EyFogrI54yOsESNN
+
+
+RAZORPAY_KEY_ID=rzp_live_b2FeaipnvJKfRi
+NEXT_PUBLIC_RAZORPAY_KEY_ID=rzp_live_b2FeaipnvJKfRi
+RAZORPAY_SECRET=U1BcRhML8DyBinozo2Os9K0F
 
 
 
