Modify the admin panel dashboard

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGODB_URI=mongodb+srv://bringsmilefoundation37:GMSzextT3Q6ns7g5@cluster0.ktbtwo2.mongodb.net/
-DB_NAME="BringSmileFoundation"
+DB_NAME="PlanToEmpower"
 MONGODB_USERNAME=bringsmilefoundation37
 MONGODB_PASSWORD=GMSzextT3Q6ns7g5
 
