--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
@@ -73,6 +74,7 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.5",
     "react-typing-effect": "^2.0.5",
+    "recharts": "^3.1.0",
     "resend": "^4.0.0",
     "sharp": "^0.33.5",
     "sonner": "^2.0.5",
